  during application runtime.
- Poco::Logger now also support a symbolic log level "none"
  (for use with setLevel()) that disables logging completely
  for that Logger (equivalent to setLevel(0)).
- Added experimental Android support, using the existing gmake-based
  build system.
- fixed SF# 3288584: DateTimeFormatter link error


Release 1.4.1p1 (2011-02-08)
============================

- Poco::Mutex is now a recursive mutex again on Linux
  (this was caused by an unfortunate feature test for
  PTHREAD_MUTEX_RECURSIVE which did not work on Linux
  as PTHREAD_MUTEX_RECURSIVE is an enum value and not
  a macro)
- Poco::Net::SecureSocketImpl::abort() now only shuts
  down the underlying socket connection and does not free
  the SSL object, due to multithreading issues.


Release 1.4.1 (2011-01-29)
==========================

- fixed SF# 3150223: Poco::BinaryReader cannot read std::vector correctly
- fixed SF# 3146326: SharedMemory issue
- made Poco::Net::HTTPSession::abort() virtual
- added Poco::Net::SecureStreamSocket::abort() to immediately close
  a SSL/TLS connection without performing an orderly SSL/TLS shutdown.
- fixed SF# 3148126: HTTPSClientSession destructor (!) throws an IOException.
  Added try/catch block to Poco::Net::SecureSocketImpl destructor.
- added additional constructor to Poco::Net::HTTPSClientSession, taking
  both a socket and a session object.
- Poco::Net::HTTPSession::abort() now also can be used with a
  Poco::Net::HTTPSClientSession.
- fixed SF# 3148045: make clean and distclean issues
- changed Data library names on Unix/Linux platforms to
  match the names on Windows (PocoSQLite -> PocoDataSQLite,
  PocoMySQL -> PocoDataMySQL, PocoODBC -> PocoDataODBC)
- added additional options to configure script
- added additional documentation to Poco::Net::HTTPClientSession
- Poco::Net::HTTPClientSession::receiveResponse() closes the connection 
  if an exception is thrown while reading the response header. 