@@ -1,7 +1,7 @@
 //
 // RegularExpression.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/RegularExpression.h#1 $
+// $Id: //poco/1.4/Foundation/include/Poco/RegularExpression.h#2 $
 //
 // Library: Foundation
 // Package: RegExp
@@ -83,7 +83,7 @@ public:
 		RE_CASELESS        = 0x00000001, /// case insensitive matching (/i) [ctor]
 		RE_MULTILINE       = 0x00000002, /// enable multi-line mode; affects ^ and $ (/m) [ctor]
 		RE_DOTALL          = 0x00000004, /// dot matches all characters, including newline (/s) [ctor]
-		RE_EXTENDED        = 0x00000004, /// totally ignore whitespace (/x) [ctor]
+		RE_EXTENDED        = 0x00000008, /// totally ignore whitespace (/x) [ctor]
 		RE_ANCHORED        = 0x00000010, /// treat pattern as if it starts with a ^ [ctor, match]
 		RE_DOLLAR_ENDONLY  = 0x00000020, /// dollar matches end-of-string only, not last newline in string [ctor]
 		RE_EXTRA           = 0x00000040, /// enable optional PCRE functionality [ctor]
