@@ -1,7 +1,7 @@
 //
 // Thread_WIN32.h
 //
-// $Id: //poco/1.4/Foundation/src/Thread_WIN32.cpp#3 $
+// $Id: //poco/1.4/Foundation/src/Thread_WIN32.cpp#4 $
 //
 // Library: Foundation
 // Package: Threading
@@ -144,6 +144,7 @@ void ThreadImpl::startImpl(Callable target, void* pData)
 	if (isRunningImpl())
 		throw SystemException("thread already running");
 
+	threadCleanup();
 	_callbackTarget.callback = target;
 	_callbackTarget.pData = pData;
 
